Add dj-database-url to requirements

--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Welcome to the Work Tracker of Quantum Lab</h1>
+    <h1>Welcome to Quantum Lab @ Tohoku University</h1>
     <p><a href="/users/">Go to Users Page</a></p>
 </body>
 </html>
