--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Welcome to Quantum Lab @ Tohoku University</h1>
-    <p><a href="/users/">Go to Users Page</a></p>
+    <p><a href="/users/">Login (for staffs only)</a></p>
 </body>
 </html>
