--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -6,5 +6,13 @@
 <body>
     <h1>Welcome to Quantum Lab @ Tohoku University</h1>
     <p><a href="/users/">Login (for staffs only)</a></p>
+    <p><a href="/users/">Binho Le</a></p>
+    <p><a href="/users/">Peoples</a></p>
+    <p><a href="/users/">Publications</a></p>
+    <p><a href="/users/">Positions</a></p>
+    <p><a href="/users/">Upcoming Events</a></p>
+    <p><a href="/users/">Resources</a></p>
+    <p><a href="/users/">Contact</a></p>
 </body>
 </html>
+
