--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -5,14 +5,14 @@
 </head>
 <body>
     <h1>Welcome to Quantum Lab @ Tohoku University</h1>
-    <p><a href="/users/">Login (for staffs only)</a></p>
-    <p><a href="/users/">Binho Le</a></p>
-    <a href="people/" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Meet Our Team</a>
-    <p><a href="/users/">Publications</a></p>
-    <p><a href="/users/">Positions</a></p>
-    <p><a href="/users/">Upcoming Events</a></p>
-    <p><a href="/users/">Resources</a></p>
-    <p><a href="/users/">Contact</a></p>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Login (for staffs only)</a>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Binho Le</a>
+    <a href="people/" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">People</a>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Publications</a>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Positions</a>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Upcoming Events</a>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Resources</a>
+    <a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Contact</a>
 </body>
 </html>
 
