--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -7,7 +7,7 @@
     <h1>Welcome to Quantum Lab @ Tohoku University</h1>
     <p><a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Login (for staffs only)</a></p>
     <p><a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Binho Le</a></p>
-    <p><a href="people/" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">People</a></p>
+    <p><a href="/users/" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">People</a></p>
     <p><a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Publications</a></p>
     <p><a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Positions</a></p>
     <p><a href="/users/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Upcoming Events</a></p>
