Add dj-database-url to requirements

--- a/users/templates/people.html
+++ b/users/templates/people.html
@@ -18,7 +18,7 @@
     <section>
         <h2>Lab Members (alphabet order)</h2>
         <ul class="person-list">
-            <li>Dr. [Binho Le] - Principal Investigator</li>
+            <li>Binho Le - Principal Investigator</li>
             <li>[Member 1]</li>
             <li>[Member 2]</li>
         </ul>
