--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -12,7 +12,7 @@
     <p><a href="/people/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Positions</a></p>
     <p><a href="/people/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Upcoming Events</a></p>
     <p><a href="/people/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Resources</a></p>
-    <p><a href="/people/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Contact</a></p>
+    <p><a href="/% url contact/"style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Contact</a></p>
 </body>
 </html>
 
