Add dj-database-url to requirements

--- a/users/templates/people.html
+++ b/users/templates/people.html
@@ -25,7 +25,7 @@
     </section>
 
     <section>
-        <h2>Collaborators</h2>
+        <h2>Collaborators (alphabet order)</h2>
         <ul class="person-list">
             <li>Prof. [Collaborator 1] - [Institution]</li>
             <li>Dr. [Collaborator 2] - [Institution]</li>
