Add dj-database-url to requirements

--- a/users/templates/contact.html
+++ b/users/templates/contact.html
@@ -34,7 +34,7 @@
         <p><span class="label">Lab Name:</span> Quantum Lab, Tohoku University</p>
         <p><span class="label">Principal Investigator:</span> Binho Le</p>
         <p><span class="label">Address:</span> 3F, FRIS, Aramaki aza Aoba 6-3, Aoba-ku, Sendai 980-8578, Japan</p>
-        <p><span class="label">Email:</span> binho@fris.tohoku.ac.com</p>
+        <p><span class="label">Email:</span> <a href="mailto:binho@fris.tohoku.ac.jp">binho@fris.tohoku.ac.jp</a></p>
         <p><span class="label">Website:</span> <a href="https://quantumlab.onrender.com" target="_blank">quantumlab.onrender.com</a></p>
     </div>
 </body>
