--- a/users/templates/contact.html
+++ b/users/templates/contact.html
@@ -31,7 +31,7 @@
 <body>
     <div class="contact-section">
         <h1>Contact Us</h1>
-        <p><span class="label">Lab Name:</span> Quantum Lab, Tohoku University</p>
+        <p><span class="label">Lab Name:</span> Quantum Lab, FRIS, Tohoku University</p>
         <p><span class="label">Principal Investigator:</span> Binho Le</p>
         <p><span class="label">Address:</span> 3F, FRIS, Aramaki aza Aoba 6-3, Aoba-ku, Sendai 980-8578, Japan</p>
         <p><span class="label">Email:</span> <a href="mailto:binho@fris.tohoku.ac.jp">binho@fris.tohoku.ac.jp</a></p>
