--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -57,7 +57,7 @@
     <div class="main">
         <div class="left">
             <p><a href="{% url 'login' %}" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Login (for staffs only)</a></p>
-            <p><a href="/users/" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Binho Le</a></p>
+            <p><a href="{% url 'me' %}" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Binho Le</a></p>
             <p><a href="{% url 'member' %}" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Members</a></p>
             <p><a href="{% url 'publication' %}" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Publications</a></p>
             <p><a href="{% url 'position' %}" style="padding: 8px 12px; background-color: #2c3e50; color: white; text-decoration: none; border-radius: 5px;">Positions</a></p>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="right">
-            <h1>Quantum Lab</h1>
+            <h1>Quantum Lab @ Tohoku University</h1>
             <p>Our lab focuses on advancing the frontiers of quantum science and technology through four key research areas:</p>
             <ul>
                 <li><strong>Quantum Algorithms:</strong> Developing novel algorithms tailored for quantum computers to solve complex problems more efficiently.</li>
