add something new

--- a/users/templates/member.html
+++ b/users/templates/member.html
@@ -62,30 +62,44 @@
     </div>
     <div class="main">
 
-    <h1>Lab Members (Alphabetical order)</h1>    
+    <h1>Lab Members</h1>    
     <section>
-            <div class="profile">
-                <img src="{% static 'images/leon.png' %}" alt="Adachi">
-                <div class="profile-text">
-                <h2>Adachi, Leon</h2>
-                <h3> Administrative Assistant (AA, FRIS URO)</h3>
-                <p>
-                    Research Theme: 
-                    Quantum foundation physics, Nonlocal measurement. 
-                </div>
-            </div>
-
             <div class="profile">
                 <img src="{% static 'images/binho.png' %}" alt="Binho Le">
                 <div class="profile-text">
                 <h2>Le, Binho</h2>
                 <h3><a href="https://www.fris.tohoku.ac.jp/en/researcher/creative/lebinho.html" target="_blank" style="text-decoration: none; color: blue;">
                 Assistant Professor (PI)</a></h3>
+                <h3><a href="https://www.ti-fris.tohoku.ac.jp/en/fellow/" target="_blank" style="text-decoration: none; color: blue;">
+                TI-FRIS Fellow (Title)</a></h3>
                 <h3><a href="https://web.tohoku.ac.jp/dr/index.html" target="_blank" style="text-decoration: none; color: blue;">
                 Prominent Research Fellow of Tohoku University (Title)</a></h3>
                 <p><strong>Email:</strong> <a href="mailto:binho@fris.tohoku.ac.jp">binho@fris.tohoku.ac.jp</a></p>
                 <p>
                     Our group explores quantum algorithms and their applications in foundational quantum mechanics, measurement, and quantum-enhanced metrology and sensing. We focus on developing precise and efficient quantum protocols using tools like estimation theory, optimal control, and machine learning. Our goal is to advance quantum technologies through both theoretical insights and interdisciplinary collaboration.                </p>
+                </div>
+            </div>
+
+            <div class="profile">
+                <img src="{% static 'images/hai.png' %}" alt="Hai">
+                <div class="profile-text">
+                <h2>Vu, Tuan Hai</h2>
+                <h3> Adjunct Researcher (FRIS)</h3>
+                <h3> PhD student (NAIST)</h3>
+                <p>
+                    Research Theme: 
+                    Quantum computing for AI and AI for Quantum computing:
+                    developing a quantum version of attention mechanism and evaluating the ability of quantum computing for large-language model.
+                </div>
+            </div>
+
+            <div class="profile">
+                <img src="{% static 'images/jesus.jpeg' %}" alt="Urbaneja">
+                <div class="profile-text">
+                <h2>Urbaneja, Jesus</h2>
+                <h3> Administrative Assistant (AA, FRIS URO)</h3>
+                <p>
+                    Research Theme: Development of quantum algorithms with a focus on the parameter-shift rule and understanding the barren plateau phenomenon in variational quantum circuits. 
                 </div>
             </div>
 
@@ -101,6 +115,16 @@
             </div>
 
             <div class="profile">
+                <img src="{% static 'images/adril.png' %}" alt="Santoso">
+                <div class="profile-text">
+                <h2>Santoso, Adriel</h2>
+                <h3> Administrative Assistant (AA, FRIS URO)</h3>
+                <p>
+                    Research theme: Quantum sensor network for dark matter detection.
+                </div>
+            </div>
+
+            <div class="profile">
                 <img src="{% static 'images/takahashi.png' %}" alt="Takahashi">
                 <div class="profile-text">
                 <h2>Takahashi, Nozomu</h2>
@@ -108,6 +132,17 @@
                 <h3> B4 student (Matsueda Lab)</h3>
                 <p>
                     Research theme: Squeezing effect for quantum-enhanced metrology, Quantum control for metrology.                </div>
+            </div>
+
+            <div class="profile">
+                <img src="{% static 'images/leon.png' %}" alt="Adachi">
+                <div class="profile-text">
+                <h2>Adachi, Leon</h2>
+                <h3> Administrative Assistant (AA, FRIS URO)</h3>
+                <p>
+                    Research Theme: 
+                    Quantum foundation physics, Nonlocal measurement. 
+                </div>
             </div>
 
             <div class="profile">
@@ -120,17 +155,7 @@
                     Critical quantum metrology.
                 </div>
             </div>
-
-            <div class="profile">
-                <img src="{% static 'images/jesus.jpeg' %}" alt="Urbaneja">
-                <div class="profile-text">
-                <h2>Urbaneja, Jesus</h2>
-                <h3> Administrative Assistant (AA, FRIS URO)</h3>
-                <p>
-                    Research Theme: Development of quantum algorithms with a focus on the parameter-shift rule and understanding the barren plateau phenomenon in variational quantum circuits. 
-                </div>
-            </div>
-
+            
             <div class="profile">
                 <img src="{% static 'images/vu.png' %}" alt="Vu">
                 <div class="profile-text">
@@ -139,16 +164,6 @@
                 <p>
                     Research Theme: 
                     Squeezing effect in spin ensemble and applications.
-                </div>
-            </div>
-
-            <div class="profile">
-                <img src="{% static 'images/adril.png' %}" alt="Santoso">
-                <div class="profile-text">
-                <h2>Santoso, Adriel</h2>
-                <h3> Administrative Assistant (AA, FRIS URO)</h3>
-                <p>
-                    Research theme: Quantum sensor network for dark matter detection.
                 </div>
             </div>
     </section>
