add something new

--- a/users/templates/me.html
+++ b/users/templates/me.html
@@ -65,6 +65,8 @@
         <div class="right">
             <h1>Binho Le</h1>
                 <ul>
+                <li><a href="https://www.ti-fris.tohoku.ac.jp/en/fellow/" target="_blank" style="text-decoration: none; color: blue;">
+                <strong>TI-FRIS Fellow (Title)</strong></a> (June 2025 - Present)</li>
                 <li><a href="https://www.sciencedirect.com/journal/softwarex/about/editorial-board" target="_blank" style="text-decoration: none; color: blue;">
                 <strong>Associate Editor</strong></a>, SoftwareX, Elsevier (June 2024 - Present)</li>    
                 <li><a href="https://www.fris.tohoku.ac.jp/en/researcher/creative/lebinho.html" target="_blank" style="text-decoration: none; color: blue;">
