add something new

--- a/users/templates/event.html
+++ b/users/templates/event.html
@@ -76,8 +76,8 @@
         <h1>News</h1>
 <hr class="divider">
             <div class="event">
-                <span class="date">---</span>
-                ---
+                <span class="date">2025 June 19</span>
+                Welcome Mr. Vu Tuan Hai, who will join our group as an Adjunct Researcher.
             </div>
 
 </div>
