add something new

--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -9,32 +9,26 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-
         .header {
             text-align: center;
             padding: 20px;
             background-color: #ffffff;
         }
-
         .header img {
             max-width: 600px;
             height: auto;
         }
-
         .main {
             display: flex;
             padding: 20px;
         }
-
         .left {
             width: 250px;
         }
-
         .left p a {
             display: block;
             margin-bottom: 10px;
         }
-
         .right {
             flex: 1;
             margin-left: 40px;
@@ -42,9 +36,16 @@
             padding: 20px;
             border-radius: 8px;
         }
-
         .right h1 {
             margin-top: 0;
+        }
+        .event {
+            margin-bottom: 12px;
+        }
+        .date {
+            display: inline-block;
+            width: 150px;
+            font-weight: bold;
         }
     </style>
     {% load static %}
@@ -77,6 +78,15 @@
                 <li><strong>Quantum Measurement:</strong> Designing precise measurement techniques at the quantum scale, including exploring nonlocal measurement methods.</li>
             </ul>
             <p>By integrating these areas, our goal is to innovate practical quantum technologies that improve sensing, computation, and fundamental understanding of nature.</p>
+
+
+            <hr class="divider">
+            <h1>News</h1>
+            <hr class="divider">
+                <div class="event">
+                    <span class="date">2025 June 19</span>
+                    Welcome Mr. Vu Tuan Hai, who will join our group as an Adjunct Researcher.
+                </div>
         </div>
     </div>
 </body>
